Dark mode fixes, row fixes

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -38,6 +38,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    span {
+      color: var(--contrast);
+    }
   }
 
   .open {
