--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -15,7 +15,7 @@
     align-items: center;
     grid-template-columns: repeat(3, 1fr) auto;
     grid-template-rows: 100%;
-    column-gap: 10px;
+    column-gap: 15px;
     padding: 10px;
     color: var(--contrast);
     &.tableHeader {
